Fix .gitignore and main controller (Task 1)

--- a/.gitignore
+++ b/.gitignore
@@ -28,14 +28,13 @@
 /public/packs
 /public/packs-test
 
-/public/uploads
-/public/diplomas
+/storage
 
+/vendor
 /node_modules
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
-
 /public/packs
 /public/packs-test
 /node_modules
