--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@hotwired/stimulus": "^3.2.1",
+    "@hotwired/turbo": "^7.2.4",
     "@hotwired/turbo-rails": "^7.2.4",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
